--- a/css/styles.css
+++ b/css/styles.css
@@ -29,8 +29,8 @@ body {
   height: 390px;
   width: 205px;
   /* fallback for old browsers */
-  /*background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);
-	/* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);
+  /* Chrome 10-25, Safari 5.1-6 */
   /*background: -webkit-gradient(linear, left top, right top, from(#E100FF), to(#7F00FF));
 	background: -webkit-linear-gradient(left, #E100FF, #7F00FF);
 	background: -o-linear-gradient(left, #E100FF, #7F00FF);
