--- a/css/styles.css
+++ b/css/styles.css
@@ -31,11 +31,11 @@ body {
   /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);
   /* Chrome 10-25, Safari 5.1-6 */
-  /*background: -webkit-gradient(linear, left top, right top, from(#E100FF), to(#7F00FF));
-	background: -webkit-linear-gradient(left, #E100FF, #7F00FF);
-	background: -o-linear-gradient(left, #E100FF, #7F00FF);
-	background: linear-gradient(to right, #E100FF, #7F00FF);
-	/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-gradient(linear, left top, right top, from(#E100FF), to(#7F00FF));
+  background: -webkit-linear-gradient(left, #E100FF, #7F00FF);
+  background: -o-linear-gradient(left, #E100FF, #7F00FF);
+  background: linear-gradient(to right, #E100FF, #7F00FF);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   /*margin: 10px auto;
 	border-radius: 30px;
 	cursor: pointer;
