--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,8 @@ body {
 .heldOf {
   background: #B2FEFA;
   /* fallback for old browsers */
-  /*background: -webkit-linear-gradient(to right, #0ED2F7, #B2FEFA);
-	/* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, #0ED2F7, #B2FEFA);
+  /* Chrome 10-25, Safari 5.1-6 */
   /*background: -webkit-gradient(linear, left top, right top, from(#0ED2F7), to(#B2FEFA));
 	background: -webkit-linear-gradient(left, #0ED2F7, #B2FEFA);
 	background: -o-linear-gradient(left, #0ED2F7, #B2FEFA);
