--- a/css/styles.css
+++ b/css/styles.css
@@ -52,9 +52,10 @@ body {
   background: -o-linear-gradient(left, #0ED2F7, #B2FEFA);
   background: linear-gradient(to right, #0ED2F7, #B2FEFA);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  /*	border-radius: 30px;
+  border-radius: 30px;
 }
 
+/*
 .dragged {
 	height: 410px;
 	width: 220px;
