--- a/css/styles.css
+++ b/css/styles.css
@@ -55,22 +55,22 @@ body {
   border-radius: 30px;
 }
 
-/*
 .dragged {
-	height: 410px;
-	width: 220px;
-	margin: 15px;
-	display: inline-block;
-	-webkit-transition: 200ms ease-in-out;
-	-o-transition: 200ms ease-in-out;
-	-webkit-transition: 0.3s ease-in-out;
-	-o-transition: 0.3s ease-in-out;
-	transition: 0.3s ease-in-out;
-	border-radius: 30px;
-	-webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  height: 410px;
+  width: 220px;
+  margin: 15px;
+  display: inline-block;
+  -webkit-transition: 200ms ease-in-out;
+  -o-transition: 200ms ease-in-out;
+  -webkit-transition: 0.3s ease-in-out;
+  -o-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  border-radius: 30px;
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.hoveredOf {
+
+/*.hoveredOf {
 	padding: 10px;
 	-webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 	box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
