--- a/css/styles.css
+++ b/css/styles.css
@@ -70,12 +70,13 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-/*.hoveredOf {
-	padding: 10px;
-	-webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-	box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+.hoveredOf {
+  padding: 10px;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
-.box::after {
+
+/*.box::after {
 	content: '';
 	display: block;
 	width: 0;
