--- a/css/styles.css
+++ b/css/styles.css
@@ -96,16 +96,16 @@ body {
   transition: width 1.9s;
 }
 
-/*
 .bar {
-	margin: 0;
-	height: 10px;
-	width: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
+  margin: 0;
+  height: 10px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
-#loader {
+
+/*#loader {
 	width: 0%;
 	height: 4.1px;
 	background: -webkit-linear-gradient(326deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
