--- a/css/styles.css
+++ b/css/styles.css
@@ -105,18 +105,17 @@ body {
   left: 0;
 }
 
-/*#loader {
-	width: 0%;
-	height: 4.1px;
-	background: -webkit-linear-gradient(326deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
-	background: -o-linear-gradient(326deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
-	background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
-	-webkit-animation: expand 4s ease-in-out infinite;
-	animation: expand 4s ease-in-out infinite;
-
-
+#loader {
+  width: 0%;
+  height: 4.1px;
+  background: -webkit-linear-gradient(326deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+  background: -o-linear-gradient(326deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+  background: linear-gradient(124deg, #ff2400, #e81d1d, #e8b71d, #e3e81d, #1de840, #1ddde8, #2b1de8, #dd00f3, #dd00f3);
+  -webkit-animation: expand 4s ease-in-out infinite;
+  animation: expand 4s ease-in-out infinite;
 }
-@-webkit-keyframes expand {
+
+/*@-webkit-keyframes expand {
 	to {
 		width: 100%;
 	}
