--- a/css/styles.css
+++ b/css/styles.css
@@ -121,13 +121,13 @@ body {
   }
 }
 
-/*@keyframes expand {
-	to {
-		width: 100%;
-	}
+@keyframes expand {
+  to {
+    width: 100%;
+  }
 }
 
-.containers {
+/*.containers {
   width: 520px;
   margin: 20px auto;
 }
